[tool.poetry]
name = "postgres-homeworks"
version = "0.1.0"
description = ""
authors = ["Olga Lebedeva <olga.s.lebedeva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
panda = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
